@@ -17,7 +17,7 @@
    <property name="margin">
     <number>0</number>
    </property>
-   <item row="0" column="0">
+   <item row="1" column="0">
     <widget class="QTreeView" name="treeView">
      <property name="iconSize">
       <size>
@@ -32,6 +32,9 @@
       <bool>false</bool>
      </attribute>
     </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLineEdit" name="search"/>
    </item>
   </layout>
  </widget>
